-fixed layout issues

--- a/style.css
+++ b/style.css
@@ -1,150 +1,52 @@
+:root {
+    background-color: hsl(212, 45%, 89%);
+}
+
 body {
-    background-color:  hsl(212, 45%, 89%);
-}
-
-@media screen and (min-width: 300px) {
-    .container {
-        top: 10px;
-        bottom: 10px;
-        left: 10px;
-        right: 10px;
-        position: fixed;
-        margin: auto;
-        padding: 24px;
-        align-content: center;
-        background-color: white;
-        border-radius: 30px;
-        height: 50%;
-        width: 70%;
-    }
-
-    .description h1 {
-        font-family: 'Outfit', regular;
-        padding-left: 16px;
-        padding-right: 16px;
-        font-size: 1.3em;
-        text-align: center;
-    }
-
-    .description p {
-        font-family: 'Outfit', regular;
-        color: hsl(220, 15%, 55%);
-        text-align: center;
-        font-size: 1em;
-        text-justify: auto;
-    }
-
-    .container-image {
-        display: block;
-        margin: auto;
-    }
-
-    img {
-        width: 100%;
-        height: 60%;
-        border-radius: 15px;
-    }
-}
-
-@media screen and (min-width: 400px) {
-    .container {
-        top: 10px;
-        bottom: 10px;
-        left: 10px;
-        right: 10px;
-        position: fixed;
-        margin: auto;
-        padding: 24px;
-        align-content: center;
-        background-color: white;
-        border-radius: 30px;
-        height: 60%;
-        width: 50%;
-    }
-
-    .description h1 {
-        font-family: 'Outfit', regular;
-        padding-left: 16px;
-        padding-right: 16px;
-        font-size: 1.5em;
-        text-align: center;
-    }
-
-    .description p {
-        font-family: 'Outfit', regular;
-        color: hsl(220, 15%, 55%);
-        text-align: center;
-        font-size: 1em;
-        text-justify: auto;
-    }
-
-    .container-image {
-        position: relative;
-        top: 1px;
-        bottom: 1px;
-        left: 1px;
-        right: 1px;
-        display: block;
-        margin: auto;
-    }
-
-    img {
-        margin: auto;
-        display: block;
-        width: 90%;
-        height: 40%;
-        border-radius: 15px;
-    }
-}
-
-@media screen and (min-width:800px) {
-    .container {
-        top: 10px;
-        bottom: 10px;
-        left: 10px;
-        right: 10px;
-        position: fixed;
-        margin: auto;
-        padding: 24px;
-        align-content: center;
-        background-color: white;
-        border-radius: 30px;
-        height: 60%;
-        width: 20%;
-    }
-
-    .description h1 {
-        font-family: 'Outfit', regular;
-        padding-left: 16px;
-        padding-right: 16px;
-        font-size: 1.5em;
-        text-align: center;
-    }
-
-    .container-image {
-        display: block;
-        margin: auto;
-    }
-
-    img {
-        display: block;
-        width: 100%;
-        border-radius: 15px;
-    }
-}
-
-
-
-.attribution {
     font-family: 'Outfit', regular;
-    position: fixed;
-    font-size: 11px;
-    text-align: center;
+    display: flex;
+    min-height: 100vh;
+    align-items: center;
+    font-size: 15px;
+}
+
+.card {
+    top: 10px;
     bottom: 10px;
     left: 10px;
     right: 10px;
+    position: fixed;
+    margin: auto;
+    padding: 16px;
+    align-content: center;
+    background-color: white;
+    border-radius: 30px;
+    height: 480px;
+    max-width: 300px;
 }
 
-.attribution a {
-    color: hsl(228, 45%, 44%);
+.card-title {
+    padding-left: 16px;
+    padding-right: 16px;
+    text-align: center;
+    font-size: 1.5rem;
+}
+
+.card-text {
+    font-family: 'Outfit', regular;
+    color: hsl(220, 15%, 55%);
+    text-align: center;
+    font-size: 1.1rem;
+}
+
+.card-image img {
+    display: block;
+    margin: auto;
+}
+
+img {
+    display: flex;
+    height: 50%;
+    width: 100%;
+    border-radius: 10px;
 }
